# fastapi-cognito

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose-tests.yaml  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yaml
etc/cognito_local/db/: clients.json  local_4Wg2XYXC.json  local_75ELcB6t.json
fastapi_cognito/: __init__.py
src/fastapi_cognito/: __init__.py  context_middleware_plugins.py  exceptions.py  fastapi_cognito.py  models.py  settings_parsers.py
src/fastapi_cognito/cognito_jwt/: constants.py  decode.py  exceptions.py  utils.py
test/: app.py  app_test.py
test/utils/: boto.py
